# AnonPulse

./: .gitignore  LICENSE  README.md  divisao_tarefas.txt  pyproject.toml  script_carga.py
app/: main.py
app/api/core/: enums.py
app/api/core/exceptions/: custom_exceptions.py  handlers.py
app/api/routers/: __init__.py  feedback.py  hash.py
app/api/schemas/: __init__.py  error_schema.py  feedback_schema.py  hash_schema.py  pagination_schema.py
app/database/: delta_manager.py  seq_manager.py
app/models/: __init__.py  feedback.py
app/services/: exportacao_service.py  feedback_service.py  hash_service.py
app/tests/: delta_test.py  seq_manager_test.py  streaming_zip_test.py
