[project]
name = "anonpulse"
version = "0.1.0"
description = "Plataforma desenvolvida para gerenciar feedbacks anônimos de alunos para monitores da UFC Quixadá."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.12.0",
    "fastapi[standard]>=0.135.2",
    "ruff>=0.15.8",
    "uvicorn>=0.42.0",
    "zipstream>=1.1.4",
]
